--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,19 @@ nav a {
   font-weight: bold;
 }
 
+.jumbotron1{
+  height: 50vh;
+  padding: 5em inherit;
+  margin-bottom: 0;
+  background-color: #53C0FB;
+  background: url('../img/login.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: black;
+  font-weight: bold;
+}
+
 @media (min-width: 768px) {
   .jumbotron {
     padding-top: 6rem;
